add XR sample unity

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ Assets/CaptainKrygaGP
 Assets/CaptainKrygaGP.meta
 Assets/AddressableAssetsData
 CaptainKrygaBase
+Assets/Samples
+Assets/Samples.meta
